Blender will crash when hiding a volume object rendered mode if it was previously keyframed #89929

Closed
opened 2021-07-18 04:26:34 +02:00 by Alaska · 8 comments
Member

System Information:
Operating system: Linux-5.10.0-7-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NA

Blender Version:
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-18 00:44, hash: e82c5c6607
Worked: 2.93.1
Prior to bfa3dc91b7 according to my bisecting

Short description of error:
Blender will crash when hiding a volume object rendered mode if it was previously keyframed.

Exact steps for others to reproduce the error:

  1. Start a new scene.
  2. Add a volume object Add -> Volume -> Empty or Add -> Volume -> Import OpenVDB
  3. In the Outliner, keyframe the volume object so it is visible in the render.
  4. Shift to another frame, then click on the Display in render button and Blender should crash.

Here's a video demonstrating how it's done and a crash log.
#89929 Crash when animating volumes.txt
Crash with volumetrics.mp4

**System Information:** Operating system: Linux-5.10.0-7-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NA **Blender Version:** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-18 00:44, hash: `e82c5c6607` Worked: 2.93.1 Prior to bfa3dc91b7 according to my bisecting **Short description of error:** Blender will crash when hiding a volume object rendered mode if it was previously keyframed. **Exact steps for others to reproduce the error:** 1. Start a new scene. 2. Add a volume object `Add -> Volume -> Empty` or `Add -> Volume -> Import OpenVDB` 3. In the `Outliner`, keyframe the volume object so it is visible in the render. 4. Shift to another frame, then click on the `Display in render` button and Blender should crash. Here's a video demonstrating how it's done and a crash log. [#89929 Crash when animating volumes.txt](https://archive.blender.org/developer/F10226924/T89929_Crash_when_animating_volumes.txt) [Crash with volumetrics.mp4](https://archive.blender.org/developer/F10226920/Crash_with_volumetrics.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

Bisecting the issue points to bfa3dc91b7 as the first bad commit?
CC @mano-wii

Bisecting the issue points to bfa3dc91b7 as the first bad commit? CC @mano-wii
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Recent regression so marking this a high priority.

Recent regression so marking this a high priority.

This issue was referenced by 4ed029fc02

This issue was referenced by 4ed029fc02b022cb5ff28ed3ce70992c450d2be5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-07-18 20:12:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89929
No description provided.